refs #2149